[package]
name = "coinchecker"
version = "0.1.2"
authors = ["ugai <ugai.sub1@gmail.com>"]
edition = "2018"

description = "Client library for the Coincheck API"
readme = "README.md"
repository = "https://github.com/ugai/coinchecker"
license = "MIT"
keywords = ["cryptocurrency", "trading", "coincheck"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
digest = "0.9"
dotenv = "0.15"
hex = "0.4"
hmac = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.9", features = ["chrono", "json"] }
serial_test = "0.5"
sha2 = "0.9"
tokio = { version = "1.6", features = ["full"] }

[features]
default = []
price_type_f32 = []
